Feat : Implementación de  aprobación y consultar Casos Excepcionales